--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -17,10 +17,10 @@
             Features overview
         </a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'features-overview' %} hidden {% endif %}">
-        <li><a href="/documentation/features-overview#object-diff">Object diff</a></li>
-        <li><a href="/documentation/features-overview#javers-repository">Javers Repository</a></li>
-        <li><a href="/documentation/features-overview#json-serialization">JSON Serialization</a></li>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features-overview' %} hidden {% endif %}">
+        <li><a href="#object-diff">Object diff</a></li>
+        <li><a href="#javers-repository">Javers Repository</a></li>
+        <li><a href="#json-serialization">JSON Serialization</a></li>
     </ul>
 </section>
 
@@ -30,9 +30,9 @@
             Getting Started
         </a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'getting-started' %} hidden {% endif %}">
-        <li><a href="/documentation/getting-started#get-javers">Get JaVers</a></li>
-        <li><a href="/documentation/getting-started#create-javers-instance">Create JaVers instance</a></li>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'getting-started' %} hidden {% endif %}">
+        <li><a href="#get-javers">Get JaVers</a></li>
+        <li><a href="#create-javers-instance">Create JaVers instance</a></li>
     </ul>
 </section>
 
@@ -42,10 +42,10 @@
             Examples &mdash; Diff
         </a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'diff-examples' %} hidden {% endif %}">
-        <li><a href="/documentation/diff-examples#compare-entities">Compare Entities</a></li>
-        <li><a href="/documentation/diff-examples#compare-valueobjects">Compare Value Objects</a></li>
-        <li><a href="/documentation/diff-examples#compare-graphs">Compare graphs</a></li>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'diff-examples' %} hidden {% endif %}">
+        <li><a href="#compare-entities">Compare Entities</a></li>
+        <li><a href="#compare-valueobjects">Compare Value Objects</a></li>
+        <li><a href="#compare-graphs">Compare graphs</a></li>
     </ul>
 </section>
 
@@ -55,11 +55,11 @@
             Examples &mdash; Repository
         </a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'repository-examples' %} hidden {% endif %}">
-        <li><a href="/documentation/repository-examples#commit-changes">Commit changes</a></li>
-        <li><a href="/documentation/repository-examples#read-snapshots-history">Read snapshots history</a></li>
-        <li><a href="/documentation/repository-examples#read-changes-history">Read changes history</a></li>
-        <li><a href="/documentation/repository-examples#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'repository-examples' %} hidden {% endif %}">
+        <li><a href="#commit-changes">Commit changes</a></li>
+        <li><a href="#read-snapshots-history">Read snapshots history</a></li>
+        <li><a href="#read-changes-history">Read changes history</a></li>
+        <li><a href="#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
     </ul>
 </section>
 
@@ -69,17 +69,17 @@
             Configuration
         </a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'configuration' %} hidden {% endif %}">
-        <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
-        <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a>
-        <li><a href="/documentation/configuration#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
-        <li><a href="/documentation/configuration#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
-        <li><a href="/documentation/configuration#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'configuration' %} hidden {% endif %}">
+        <li><a href="#domain-model-mapping">Domain model mapping</a></li>
+        <li><a href="#mapping-configuration">Mapping configuration</a>
+        <li><a href="#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
+        <li><a href="#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
+        <li><a href="#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
         </li>
-        <li><a href="/documentation/configuration#repository-setup">JaversRepository setup</a></li>
-        <li><a href="/documentation/configuration#custom-json-serialization">&nbsp; &nbsp; Custom JSON
+        <li><a href="#repository-setup">JaversRepository setup</a></li>
+        <li><a href="#custom-json-serialization">&nbsp; &nbsp; Custom JSON
             serialization</a>
-        <li><a href="/documentation/configuration#json-type-adapters">&nbsp; &nbsp; JSON TypeAdapters</a>
+        <li><a href="#json-type-adapters">&nbsp; &nbsp; JSON TypeAdapters</a>
     </ul>
 </section>
 
@@ -87,7 +87,7 @@
     <h2>
         <a href="/documentation/javers-internals">JaVers internals</a>
     </h2>
-    <ul class="list-unstyled {% if page.submenu != 'javers-internals' %} hidden {% endif %}">
-        <li><a href="/documentation/javers-internals#type-mapper">TypeMapper</a></li>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'javers-internals' %} hidden {% endif %}">
+        <li><a href="#type-mapper">TypeMapper</a></li>
     </ul>
 </section>
