--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -14,6 +14,7 @@
             <a class="navbar-brand" href="http://javers.org">
                 <img alt="JaVers logo" src="/img/logotype.png"/>
             </a>
+            <small class="logo-version">{{site.javers_current_version}}</small>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
