--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,6 +1,6 @@
 <section>
     <h2>
-        <a href="/documentation/">
+        <a href="/documentation">
             Introduction
         </a>
     </h2>
