--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,9 +1,7 @@
 <section>
-    <h2>
-        <a href="/documentation">
-            Introduction
+    <a href="/documentation">
+           Introduction
         </a>
-    </h2>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'introduction' %} hidden {% endif %}">
         <li><a href="#what-is-javers">What is JaVers</a></li>
         <li><a href="#story">Story</a></li>
@@ -12,11 +10,8 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/features-overview">
-            Features overview
-        </a>
-    </h2>
+    <a href="/documentation/features-overview">
+            Features overview</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features-overview' %} hidden {% endif %}">
         <li><a href="#object-diff">Object diff</a></li>
         <li><a href="#javers-repository">Javers Repository</a></li>
@@ -25,11 +20,10 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/getting-started">
+
+    <a href="/documentation/getting-started">
             Getting Started
-        </a>
-    </h2>
+    </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'getting-started' %} hidden {% endif %}">
         <li><a href="#get-javers">Get JaVers</a></li>
         <li><a href="#create-javers-instance">Create JaVers instance</a></li>
@@ -37,11 +31,9 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/diff-examples">
+    <a href="/documentation/diff-examples">
             Examples &mdash; Diff
-        </a>
-    </h2>
+    </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'diff-examples' %} hidden {% endif %}">
         <li><a href="#compare-entities">Compare Entities</a></li>
         <li><a href="#compare-valueobjects">Compare Value Objects</a></li>
@@ -50,11 +42,9 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/repository-examples">
+    <a href="/documentation/repository-examples">
             Examples &mdash; Repository
-        </a>
-    </h2>
+    </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'repository-examples' %} hidden {% endif %}">
         <li><a href="#commit-changes">Commit changes</a></li>
         <li><a href="#read-snapshots-history">Read snapshots history</a></li>
@@ -64,11 +54,9 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/configuration">
+    <a href="/documentation/configuration">
             Configuration
-        </a>
-    </h2>
+    </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'configuration' %} hidden {% endif %}">
         <li><a href="#domain-model-mapping">Domain model mapping</a></li>
         <li><a href="#mapping-configuration">Mapping configuration</a>
@@ -84,9 +72,7 @@
 </section>
 
 <section>
-    <h2>
-        <a href="/documentation/javers-internals">JaVers internals</a>
-    </h2>
+    <a href="/documentation/javers-internals">JaVers internals</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'javers-internals' %} hidden {% endif %}">
         <li><a href="#type-mapper">TypeMapper</a></li>
     </ul>
