--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,18 +1,19 @@
 <section>
     <a href="/documentation">
-           Introduction
+        Overview
         </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'introduction' %} hidden {% endif %}">
         <li><a href="#what-is-javers">What is JaVers</a></li>
         <li><a href="#story">Story</a></li>
         <li><a href="#basic-facts-about-javers">Basic facts about JaVers</a></li>
+        <li><a href="#licence">Licence</a></li>
     </ul>
 </section>
 
 <section>
-    <a href="/documentation/features-overview">
-            Features overview</a>
-    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features-overview' %} hidden {% endif %}">
+    <a href="/documentation/features">
+            Features</a>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
         <li><a href="#object-diff">Object diff</a></li>
         <li><a href="#javers-repository">Javers Repository</a></li>
         <li><a href="#json-serialization">JSON Serialization</a></li>
