--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,7 @@
         <div class="row">
             <p class="col-md-12">
                 <img alt="JaVers logo small" src="/img/logotype-small.png"/><br/>
-                JaVers is released under<br/>
-                <a title="Apache License Version 2.0" href="http://opensource.org/licenses/Apache-2.0">Apache License
-                    Version 2.0</a>
+                Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>
             </p>
         </div>
     </div>
