--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -21,13 +21,13 @@
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
                 <li {% if current[1] == 'documentation/features-overview' %}class='active'{% endif %}>
-                    <a href="/documentation/features-overview">Features</a>
+                    <a href="/documentation/features">Features</a>
                 </li>
                 <li {% if current[1] == 'documentation' %}class='active'{% endif %}>
                     <a href="/documentation">Documentation</a>
                     <ul class="visible-xs">
-                        <li><a href="/documentation/">Introduction</a></li>
-                        <li><a href="/documentation/features-overview">Features overview</a></li>
+                        <li><a href="/documentation/">Overview</a></li>
+                        <li><a href="/documentation/features">Features</a></li>
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
                         <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
