--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -50,7 +50,8 @@
         <li><a href="#commit-changes">Commit changes</a></li>
         <li><a href="#read-snapshots-history">Read snapshots history</a></li>
         <li><a href="#read-changes-history">Read changes history</a></li>
-        <li><a href="#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
+        <li><a href="#change-log">Change log</a></li>
+        <li><a href="#json-type-adapter">JSON TypeAdapter</a></li>
     </ul>
 </section>
 
