--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -22,6 +22,7 @@
         <li><a href="#object-diff">Object diff</a></li>
         <li><a href="#javers-repository">Javers Repository</a></li>
         <li><a href="#json-serialization">JSON Serialization</a></li>
+        <li><a href="#release-notes">Release notes</a></li>
     </ul>
 </section>
 
