--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -70,6 +70,7 @@
         <li><a href="#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
         <li><a href="#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
         <li><a href="#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
+        <li><a href="#custom-comparators">&nbsp; &nbsp; Custom Comparators</a>
         </li>
         <li><a href="#repository-setup">JaversRepository setup</a></li>
         <li><a href="#custom-json-serialization">&nbsp; &nbsp; Custom JSON
