--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <p class="col-md-12">
                 <img alt="JaVers logo small" src="/img/logotype-small.png"/><br/>
-                Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>
+                Report an issue in our <a href="https://github.com/javers/javers/issues/">github issues</a>
             </p>
         </div>
     </div>
