--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -84,3 +84,11 @@
         <li><a href="#type-mapper">TypeMapper</a></li>
     </ul>
 </section>
+
+<section>
+    <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">Spring integration</a>
+    <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#usage">Usage</a></li>
+    </ul>
+</section>
