documentation — Spring integration

--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -33,6 +33,7 @@
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
                         <li><a href="/documentation/configuration">Configuration</a></li>
                         <li><a href="/documentation/javers-internals">JaVers internals</a></li>
+                        <li><a href="/documentation/spring-integration">Spring integration</a></li>
                     </ul>
                 </li>
                 <li><a href="/javadoc_1.0.0/index.html">Javadoc</a></li>
