--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -31,7 +31,8 @@
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
                         <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
-                        <li><a href="/documentation/configuration">Configuration</a></li>
+                        <li><a href="/documentation/domain-configuration">Configuration &mdash; Domain</a></li>
+                        <li><a href="/documentation/repository-configuration">Configuration &mdash; Repository</a></li>
                         <li><a href="/documentation/javers-internals">JaVers internals</a></li>
                         <li><a href="/documentation/spring-integration">Spring integration</a></li>
                     </ul>
