jpa/hibernate, first thoughts

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -87,12 +87,16 @@
 <section>
     <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">Spring integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
-        <li><a href="#spring-integration-introduction">Introduction</a></li>
-        <li><a href="#spring-int-usage">Usage</a></li>
-        <li><a href="#register-author-provider">AuthorProvider</a></li>
-        <li><a href="#full-configuration-example">Full configuration example</a></li>
-        <li><a href="#javers-auditable-ann">@JaversAuditable annotation</a></li>
-        <li><a href="#spring-data-integration">Spring Data integration</a></li>
+
+        <li><a href="#author-provider">AuthorProvider</a></li>
+
+        <li><a href="#author-provider">ConnectionProvider</a></li>
+
+        <li><a href="#spring-int-configuration">Configuration</a></li>
+
+
+
+        <li><a href="#full-configuration-example">Spring JavaConfig example</a></li>
     </ul>
 </section>
 
