spring-integration rewrite

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -87,16 +87,10 @@
 <section>
     <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">Spring integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
-
-        <li><a href="#author-provider">AuthorProvider</a></li>
-
-        <li><a href="#author-provider">ConnectionProvider</a></li>
-
-        <li><a href="#spring-int-configuration">Configuration</a></li>
-
-
-
-        <li><a href="#full-configuration-example">Spring JavaConfig example</a></li>
+        <li><a href="#auto-audit-aspect">Auto-audit aspect</a></li>
+        <li><a href="#auto-audit-example">Auto-audit example with MongoDB</a></li>
+        <li><a href="#jpa-transaction-manager-integration">JPA Transaction Manager integration</a></li>
+        <li><a href="#spring-jpa-config-example">Spring JPA Config example</a></li>
     </ul>
 </section>
 
