--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -88,9 +88,9 @@
     <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">Spring integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
         <li><a href="#auto-audit-aspect">Auto-audit aspect</a></li>
-        <li><a href="#auto-audit-example">Auto-audit example with MongoDB</a></li>
+        <li><a href="#auto-audit-example">&nbsp; &nbsp; Auto-audit example with MongoDB</a></li>
         <li><a href="#jpa-transaction-manager-integration">JPA Transaction Manager integration</a></li>
-        <li><a href="#spring-jpa-config-example">Spring JPA Config example</a></li>
+        <li><a href="#spring-jpa-example">&nbsp; &nbsp; Spring JPA example</a></li>
     </ul>
 </section>
 
