syntax highlight is back

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,10 @@
 <link href="/css/style.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet'
       type='text/css'>
+
+<!-- github style syntax highlight -->
+<link href="/css/github_pygments.css" rel="stylesheet">
+
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
