more about sql repository

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -78,8 +78,9 @@
        href="/documentation/repository-configuration">Configuration &mdash; Repository</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'repository-configuration' %} hidden {% endif %}">
         <li><a href="#choose-javers-repository">Choose JaversRepository</a></li>
-        <li><a href="#mongodb-configuration">&nbsp; &nbsp;MongoDB</a></li>
-        <li><a href="#sql-databases">&nbsp; &nbsp;SQL databases</a></li>
+        <li><a href="#mongodb-configuration">MongoDB</a></li>
+        <li><a href="#sql-databases">SQL databases</a></li>
+        <li><a href="#connection-provider">&nbsp; &nbsp;ConnectionProvider</a></li>
         <li><a href="#custom-json-serialization">Custom JSON serialization</a>
         <li><a href="#json-type-adapters">JSON TypeAdapters</a>
     </ul>
