updates for SQL 1.1.0 release

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -64,12 +64,15 @@
        href="/documentation/domain-configuration">Configuration &mdash; Domain</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'domain-configuration' %} hidden {% endif %}">
         <li><a href="#domain-model-mapping">Domain model mapping</a></li>
+        <li><a href="#entity">&nbsp; &nbsp; Entity</a></li>
+        <li><a href="#value-object">&nbsp; &nbsp; Value Object</a></li>
+        <li><a href="#ValueType">&nbsp; &nbsp; Value</a></li>
         <li><a href="#mapping-configuration">Mapping configuration</a></li>
         <li><a href="#supported-annotations">&nbsp; &nbsp; Supported annotations</a></li>
-        <li><a href="#entity-id-property">&nbsp; &nbsp; Entity Id property</a></li>
+        <li><a href="#entity-id-property">&nbsp; &nbsp; Entity Id</a></li>
         <li><a href="#property-mapping-style">&nbsp; &nbsp; Property mapping style</a></li>
-        <li><a href="#custom-comparators">&nbsp; &nbsp; Custom Comparators</a></li>
         <li><a href="#ignoring-things">&nbsp; &nbsp; Ignoring things</a></li>
+        <li><a href="#custom-comparators">Custom Comparators</a></li>
     </ul>
 </section>
 
