--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -93,8 +93,8 @@
     href="/documentation/diff-configuration">Configuration &mdash; Diff</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'diff-configuration' %} hidden {% endif %}">
         <li><a href="#list-algorithms">List comparing algorithms</a></li>
-        <li><a href="#list-algorithm-simple">&nbsp; &nbsp;Simple algorithm</a></li>
-        <li><a href="#list-algorithm-levenshtein">&nbsp; &nbsp;Levenshtein distance</a></li>
+        <li><a href="#simple-vs-levenshtein">&nbsp; &nbsp;Simple vs Levenshtein algorithm</a></li>
+        <li><a href="#more-about-levenshtein">&nbsp; &nbsp;More about Levenshtein distance</a></li>
         <li><a href="#custom-comparators">Custom comparators</a></li>
     </ul>
 </section>
