--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -54,6 +54,7 @@
         <li><a href="#commit-changes">Commit changes</a></li>
         <li><a href="#read-snapshots-history">Read snapshots history</a></li>
         <li><a href="#read-changes-history">Read changes history</a></li>
+        <li><a href="#jql">Javers Query Language</a></li>
         <li><a href="#change-log">Change log</a></li>
         <li><a href="#json-type-adapter">JSON TypeAdapter</a></li>
     </ul>
