more JQL examples

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -55,6 +55,15 @@
         <li><a href="#read-snapshots-history">Read snapshots history</a></li>
         <li><a href="#read-changes-history">Read changes history</a></li>
         <li><a href="#jql">Javers Query Language</a></li>
+
+        <li><a href="#instance-id-query">&nbsp; &nbsp;Querying for Entity</a></li>
+        <li><a href="#by-value-object-query">&nbsp; &nbsp;Querying for ValueObject</a></li>
+        <li><a href="#by-class-query">&nbsp; &nbsp;Querying by Class</a></li>
+
+        <li><a href="#property-filter">&nbsp; &nbsp;Property filter</a></li>
+        <li><a href="#limit-filter">&nbsp; &nbsp;Limit filter</a></li>
+        <li><a href="#new-object-filter">&nbsp; &nbsp;NewObject changes filter</a></li>
+
         <li><a href="#change-log">Change log</a></li>
         <li><a href="#json-type-adapter">JSON TypeAdapter</a></li>
     </ul>
