--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -31,6 +31,7 @@
                         <li><a href="/documentation/getting-started">Getting Started</a></li>
                         <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
                         <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
+                        <li><a href="/documentation/jql-examples">Examples &mdash; JQL</a></li>
                         <li><a href="/documentation/domain-configuration">Configuration &mdash; Domain</a></li>
                         <li><a href="/documentation/repository-configuration">Configuration &mdash; Repository</a></li>
                         <li><a href="/documentation/diff-configuration">Configuration &mdash; Diff</a></li>
