--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a, a:hover, a:active {
     color: #ea4d1a;
 }
 
-pre code {
+code {
     background: transparent;
     padding-right: 0;
     color: #111;
